--- a/content/resources/11-522f05.md
+++ b/content/resources/11-522f05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: Public transportation provides an important category of data for Urban
   Information Systems (UIS). (Image courtesy of the U.S. Census.)
-file: /media/courses/11-522-research-seminar-on-urban-information-systems-fall-2005/26abdd01f0c402f746ed752b5e978562_11-522f05.jpg
+file: /courses/11-522-research-seminar-on-urban-information-systems-fall-2005/26abdd01f0c402f746ed752b5e978562_11-522f05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Public transportation provides an important category of data for Urban
@@ -15,3 +15,5 @@ resourcetype: Image
 title: 11-522f05.jpg
 uid: 26abdd01-f0c4-02f7-46ed-752b5e978562
 ---
+Public transportation provides an important category of data for Urban Information Systems (UIS). (Image courtesy of the U.S. Census.)
+
