Sync all content

--- a/content/resources/11-522f05-th.md
+++ b/content/resources/11-522f05-th.md
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: Public transportation provides an important category of data for UIS.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-522f05-th.jpg
