--- a/content/resources/11-522f05.md
+++ b/content/resources/11-522f05.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Public transportation provides an important category of data for UIS.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 11-522f05.jpg
 uid: 26abdd01-f0c4-02f7-46ed-752b5e978562
 ---
 Public transportation provides an important category of data for Urban Information Systems (UIS). (Image courtesy of the U.S. Census.)
-
